force-app/main/default/objects/Account_Extension__c/Account_Extension__c.object-meta.xml
<CustomObject>
    <label>Account Extension</label>
    <nameField>
        <label>Account Extension Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Extensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>