force-app/main/default/objects/Account_Extension__c/fields/Accounting_Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Firm_Name__c</fullName>
    <label>Accounting Firm Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>