force-app/main/default/objects/Account_Extension__c/fields/AVID__c.field-meta.xml
<CustomField>
    <fullName>AVID__c</fullName>
    <label>AVID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>