force-app/main/default/objects/Account_Extension__c/fields/BEMFAB_Marketability__c.field-meta.xml
<CustomField>
    <fullName>BEMFAB_Marketability__c</fullName>
    <label>BEMFAB (Marketability)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>