force-app/main/default/objects/Account_Extension__c/fields/Carrier_Route_Code__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Route_Code__c</fullName>
    <label>Carrier Route Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>