force-app/main/default/objects/Account_Extension__c/fields/CEO_Mgmt_Responsibility_Code_MRC__c.field-meta.xml
<CustomField>
    <fullName>CEO_Mgmt_Responsibility_Code_MRC__c</fullName>
    <label>CEO Mgmt Responsibility Code (MRC)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>