force-app/main/default/objects/Account_Extension__c/fields/CH_Account_Tag__c.field-meta.xml
<CustomField>
    <fullName>CH_Account_Tag__c</fullName>
    <label>CH Account Tag</label>
    <length>50</length>
    <type>Text</type>
</CustomField>