force-app/main/default/objects/Account_Extension__c/fields/Chain_ID__c.field-meta.xml
<CustomField>
    <fullName>Chain_ID__c</fullName>
    <label>Chain ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>