force-app/main/default/objects/Account_Extension__c/fields/Chief_Executive_Officer_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Chief_Executive_Officer_Last_Name__c</fullName>
    <label>Chief Executive Officer - Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>