force-app/main/default/objects/Account_Extension__c/fields/Chief_Executive_Officer_Middle_Initial__c.field-meta.xml
<CustomField>
    <fullName>Chief_Executive_Officer_Middle_Initial__c</fullName>
    <label>Chief Executive Officer - Middle Initial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>