force-app/main/default/objects/Account_Extension__c/fields/Chief_Executive_Officer_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Chief_Executive_Officer_Prefix__c</fullName>
    <label>Chief Executive Officer - Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>