force-app/main/default/objects/Account_Extension__c/fields/Country_Access_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Access_Code__c</fullName>
    <label>Country Access Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>