force-app/main/default/objects/Account_Extension__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <label>Currency Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>