force-app/main/default/objects/Account_Extension__c/fields/D_B_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>D_B_Account_Name__c</fullName>
    <formula>D_U_N_S_Number__c +&quot;: &quot;+ Business_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>D&amp;B Account Name</label>
    <type>Text</type>
</CustomField>