force-app/main/default/objects/Account_Extension__c/fields/D_B_Continent_Code__c.field-meta.xml
<CustomField>
    <fullName>D_B_Continent_Code__c</fullName>
    <label>D&amp;B Continent Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>