force-app/main/default/objects/Account_Extension__c/fields/D_B_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>D_B_Country_Code__c</fullName>
    <label>D&amp;B Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>