force-app/main/default/objects/Account_Extension__c/fields/Domestic_Ultimate_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Ultimate_Business_Name__c</fullName>
    <label>Domestic Ultimate Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>