force-app/main/default/objects/Account_Extension__c/fields/Domestic_Ultimate_D_U_N_S_Number__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Ultimate_D_U_N_S_Number__c</fullName>
    <label>Domestic Ultimate D-U-N-S Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>