force-app/main/default/objects/Account_Extension__c/fields/Domestic_Ultimate_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Ultimate_Postal_Code__c</fullName>
    <label>Domestic Ultimate Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>