force-app/main/default/objects/Account_Extension__c/fields/Domestic_Ultimate_Revenue_Range__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Ultimate_Revenue_Range__c</fullName>
    <label>Domestic Ultimate Revenue Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>