force-app/main/default/objects/Account_Extension__c/fields/Domestic_Ultimate_State_Province_Abbr__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Ultimate_State_Province_Abbr__c</fullName>
    <label>Domestic Ultimate State/Province Abbr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>