force-app/main/default/objects/Account_Extension__c/fields/Domestic_Ultimate_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Ultimate_Street_Address__c</fullName>
    <label>Domestic Ultimate Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>