force-app/main/default/objects/Account_Extension__c/fields/Domestic_Ultimate_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Ultimate_Zip_Code__c</fullName>
    <label>Domestic Ultimate Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>