force-app/main/default/objects/Account_Extension__c/fields/Duplicate_Company__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Company__c</fullName>
    <label>Duplicate Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>