force-app/main/default/objects/Account_Extension__c/fields/Employee_Count_3_Year_Base__c.field-meta.xml
<CustomField>
    <fullName>Employee_Count_3_Year_Base__c</fullName>
    <label>Employee Count 3 Year Base</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>