force-app/main/default/objects/Account_Extension__c/fields/Employee_Count_5_Year_Growth_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Employee_Count_5_Year_Growth_Percentage__c</fullName>
    <label>Employee Count 5 Year Growth Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>