force-app/main/default/objects/Account_Extension__c/fields/Employee_Count_Range__c.field-meta.xml
<CustomField>
    <fullName>Employee_Count_Range__c</fullName>
    <label>Employee Count Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>