force-app/main/default/objects/Account_Extension__c/fields/Employee_Count_Total_Reliability_Code__c.field-meta.xml
<CustomField>
    <fullName>Employee_Count_Total_Reliability_Code__c</fullName>
    <label>Employee Count Total Reliability Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>