force-app/main/default/objects/Account_Extension__c/fields/Employee_Count_Trend_Year__c.field-meta.xml
<CustomField>
    <fullName>Employee_Count_Trend_Year__c</fullName>
    <label>Employee Count Trend Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>