force-app/main/default/objects/Account_Extension__c/fields/Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>Fax_Number__c</fullName>
    <label>Fax Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>