force-app/main/default/objects/Account_Extension__c/fields/FIPS_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>FIPS_Country_Code__c</fullName>
    <label>FIPS Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>