force-app/main/default/objects/Account_Extension__c/fields/FIPS_MSA_Code__c.field-meta.xml
<CustomField>
    <fullName>FIPS_MSA_Code__c</fullName>
    <label>FIPS MSA Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>