force-app/main/default/objects/Account_Extension__c/fields/First_Executive_Middle_Initial__c.field-meta.xml
<CustomField>
    <fullName>First_Executive_Middle_Initial__c</fullName>
    <label>First Executive Middle Initial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>