force-app/main/default/objects/Account_Extension__c/fields/First_Executive_Prefix__c.field-meta.xml
<CustomField>
    <fullName>First_Executive_Prefix__c</fullName>
    <label>First Executive Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>