force-app/main/default/objects/Account_Extension__c/fields/Geo_Code_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Geo_Code_Accuracy__c</fullName>
    <label>Geo Code Accuracy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>