force-app/main/default/objects/Account_Extension__c/fields/Global_Ultimate_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_Business_Name__c</fullName>
    <label>Global Ultimate Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>