force-app/main/default/objects/Account_Extension__c/fields/Global_Ultimate_FIPS_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_FIPS_Country_Code__c</fullName>
    <label>Global Ultimate FIPS Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>