force-app/main/default/objects/Account_Extension__c/fields/Global_Ultimate_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_Indicator__c</fullName>
    <label>Global Ultimate Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>