force-app/main/default/objects/Account_Extension__c/fields/Global_Ultimate_State_Province_Abbr__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_State_Province_Abbr__c</fullName>
    <label>Global Ultimate State/Province Abbr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>