force-app/main/default/objects/Account_Extension__c/fields/Headquarter_D_U_N_S_Number__c.field-meta.xml
<CustomField>
    <fullName>Headquarter_D_U_N_S_Number__c</fullName>
    <label>Headquarter D-U-N-S Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>