force-app/main/default/objects/Account_Extension__c/fields/Headquarter_D_U_N_S_Number_Group__c.field-meta.xml
<CustomField>
    <fullName>Headquarter_D_U_N_S_Number_Group__c</fullName>
    <description>Headquarter grouping</description>
    <label>Headquarter D-U-N-S Number Group</label>
    <length>20</length>
    <type>Text</type>
</CustomField>