force-app/main/default/objects/Account_Extension__c/fields/Headquarter_Parent_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Headquarter_Parent_Business_Name__c</fullName>
    <label>Headquarter/Parent Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>