force-app/main/default/objects/Account_Extension__c/fields/Headquarter_Parent_FIPS_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Headquarter_Parent_FIPS_Country_Code__c</fullName>
    <label>Headquarter/Parent FIPS Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>