force-app/main/default/objects/Account_Extension__c/fields/Headquarter_Parent_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Headquarter_Parent_State_Province__c</fullName>
    <label>Headquarter/Parent State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>