force-app/main/default/objects/Account_Extension__c/fields/Import_Export_Agent_Code__c.field-meta.xml
<CustomField>
    <fullName>Import_Export_Agent_Code__c</fullName>
    <label>Import/Export/Agent Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>