force-app/main/default/objects/Account_Extension__c/fields/iSell_OSKeyID__c.field-meta.xml
<CustomField>
    <fullName>iSell_OSKeyID__c</fullName>
    <label>iSell OSKeyID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>