force-app/main/default/objects/Account_Extension__c/fields/Latitude_Short__c.field-meta.xml
<CustomField>
    <fullName>Latitude_Short__c</fullName>
    <label>Latitude (Short)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>