force-app/main/default/objects/Account_Extension__c/fields/Legal_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Legal_Status_Code__c</fullName>
    <label>Legal Status Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>