force-app/main/default/objects/Account_Extension__c/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <label>Location Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>