force-app/main/default/objects/Account_Extension__c/fields/Longitude_Short__c.field-meta.xml
<CustomField>
    <fullName>Longitude_Short__c</fullName>
    <label>Longitude (Short)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>