force-app/main/default/objects/Account_Extension__c/fields/Mailing_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_2__c</fullName>
    <label>Mailing Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>