force-app/main/default/objects/Account_Extension__c/fields/Mailing_City_Name__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City_Name__c</fullName>
    <label>Mailing City Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>