force-app/main/default/objects/Account_Extension__c/fields/Mailing_State_Province_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State_Province_Abbreviation__c</fullName>
    <label>Mailing State/Province Abbreviation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>