force-app/main/default/objects/Account_Extension__c/fields/Major_Industry_Category__c.field-meta.xml
<CustomField>
    <fullName>Major_Industry_Category__c</fullName>
    <label>Major Industry Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>