force-app/main/default/objects/Account_Extension__c/fields/Major_Industry_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Major_Industry_Category_Name__c</fullName>
    <label>Major Industry Category Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>