force-app/main/default/objects/Account_Extension__c/fields/Manufacturing_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Indicator__c</fullName>
    <label>Manufacturing Indicator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>