force-app/main/default/objects/Account_Extension__c/fields/Match_Driver__c.field-meta.xml
<CustomField>
    <fullName>Match_Driver__c</fullName>
    <label>Match Driver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>