force-app/main/default/objects/Account_Extension__c/fields/Match_Grade__c.field-meta.xml
<CustomField>
    <fullName>Match_Grade__c</fullName>
    <label>Match Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>