force-app/main/default/objects/Account_Extension__c/fields/Match_Profile__c.field-meta.xml
<CustomField>
    <fullName>Match_Profile__c</fullName>
    <label>Match Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>