force-app/main/default/objects/Account_Extension__c/fields/Minority_Owned_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Minority_Owned_Indicator__c</fullName>
    <label>Minority Owned Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>