force-app/main/default/objects/Account_Extension__c/fields/NAICS_4_1_Code__c.field-meta.xml
<CustomField>
    <fullName>NAICS_4_1_Code__c</fullName>
    <label>NAICS 4_1 Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>