force-app/main/default/objects/Account_Extension__c/fields/National_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>National_Identification_Number__c</fullName>
    <label>National Identification Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>