force-app/main/default/objects/Account_Extension__c/fields/Number_of_Family_Members__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Family_Members__c</fullName>
    <label>Number of Family Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>