force-app/main/default/objects/Account_Extension__c/fields/Owns_Rents_Code__c.field-meta.xml
<CustomField>
    <fullName>Owns_Rents_Code__c</fullName>
    <label>Owns/Rents Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>