force-app/main/default/objects/Account_Extension__c/fields/Population_Code__c.field-meta.xml
<CustomField>
    <fullName>Population_Code__c</fullName>
    <label>Population Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>