force-app/main/default/objects/Account_Extension__c/fields/Primary_Local_Activity_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Local_Activity_Code__c</fullName>
    <label>Primary Local Activity Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>