force-app/main/default/objects/Account_Extension__c/fields/Primary_NAICS_1_2__c.field-meta.xml
<CustomField>
    <fullName>Primary_NAICS_1_2__c</fullName>
    <label>Primary NAICS 1_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>