force-app/main/default/objects/Account_Extension__c/fields/Public_Private_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Public_Private_Indicator__c</fullName>
    <label>Public/Private Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>