force-app/main/default/objects/Account_Extension__c/fields/Related_Industries__c.field-meta.xml
<CustomField>
    <fullName>Related_Industries__c</fullName>
    <label>Related Industries</label>
    <length>255</length>
    <type>Text</type>
</CustomField>