force-app/main/default/objects/Account_Extension__c/fields/Revenue_3_Year_Growth_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Revenue_3_Year_Growth_Percentage__c</fullName>
    <label>Revenue 3 Year Growth Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>