force-app/main/default/objects/Account_Extension__c/fields/Revenue_Local_Currency_Reliability_Code__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Local_Currency_Reliability_Code__c</fullName>
    <label>Revenue Local Currency Reliability Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>