force-app/main/default/objects/Account_Extension__c/fields/Revenue_Range__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Range__c</fullName>
    <label>Revenue Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>