force-app/main/default/objects/Account_Extension__c/fields/Revenue_Trend_Year__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Trend_Year__c</fullName>
    <label>Revenue Trend Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>