force-app/main/default/objects/Account_Extension__c/fields/Revenue_US_Dollars__c.field-meta.xml
<CustomField>
    <fullName>Revenue_US_Dollars__c</fullName>
    <label>Revenue (US Dollars)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>